export const snapshot = {};

snapshot[`parseFunctionCall: someFunction(); someOtherFunction(" aa() ; bbb()") 1`] = `'{"index":14,"rowBegin":1,"columnBegin":15,"rowEnd":1,"columnEnd":16}: The parser cannot reach the end of file, stops at ";" at position {"index":14,"rowBegin":1,"columnBegin":15,"rowEnd":1,"columnEnd":16}.'`;

snapshot[`parseFunctionCalls: someFunction(); someOtherFunction(" aa() ; bbb()") 1`] = `
[
  {
    args: [
    ],
    name: "someFunction",
    type: "call",
  },
  {
    args: [
      {
        type: "string",
        value: " aa() ; bbb()",
      },
    ],
    name: "someOtherFunction",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall() 1`] = `
{
  args: [
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall() 1`] = `
[
  {
    args: [
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall('a', 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall('a', 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall('a \\'ha\\'', 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a 'ha'",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall('a \\'ha\\'', 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a 'ha'",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(\`a\`, 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(\`a\`, 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(\`a \\\`ha\\\`\`, 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a \`ha\`",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(\`a \\\`ha\\\`\`, 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a \`ha\`",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a", 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a", 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a \\"ha\\"", 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: 'a "ha"',
    },
    {
      type: "number",
      value: 111,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a \\"ha\\"", 111) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: 'a "ha"',
      },
      {
        type: "number",
        value: 111,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a", 111,true) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: true,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a", 111,true) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: true,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a", 111, false) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: false,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a", 111, false) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: false,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a false true 123 b", 111, false) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a false true 123 b",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: false,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a false true 123 b", 111, false) 1`] = `
[
  {
    args: [
      {
        type: "string",
        value: "a false true 123 b",
      },
      {
        type: "number",
        value: 111,
      },
      {
        type: "boolean",
        value: false,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(-123) 1`] = `
{
  args: [
    {
      type: "number",
      value: -123,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(-123) 1`] = `
[
  {
    args: [
      {
        type: "number",
        value: -123,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: some_call() 1`] = `
{
  args: [
  ],
  name: "some_call",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: some_call() 1`] = `
[
  {
    args: [
    ],
    name: "some_call",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: some-call() 1`] = `
{
  args: [
  ],
  name: "some-call",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: some-call() 1`] = `
[
  {
    args: [
    ],
    name: "some-call",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: SOMECALL() 1`] = `
{
  args: [
  ],
  name: "SOMECALL",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: SOMECALL() 1`] = `
[
  {
    args: [
    ],
    name: "SOMECALL",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("hi" + ("there" + ("is" + "nesting"))) 1`] = `
{
  args: [
    {
      args: [
        {
          type: "string",
          value: "hi",
        },
        {
          args: [
            {
              type: "string",
              value: "there",
            },
            {
              args: [
                {
                  type: "string",
                  value: "is",
                },
                {
                  type: "string",
                  value: "nesting",
                },
              ],
              name: "__+__",
              type: "call",
            },
          ],
          name: "__+__",
          type: "call",
        },
      ],
      name: "__+__",
      type: "call",
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("hi" + ("there" + ("is" + "nesting"))) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "hi",
          },
          {
            args: [
              {
                type: "string",
                value: "there",
              },
              {
                args: [
                  {
                    type: "string",
                    value: "is",
                  },
                  {
                    type: "string",
                    value: "nesting",
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "__+__",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("a string " + concated("STRING + blah" + (b() + c()) + "\$")) 1`] = `
{
  args: [
    {
      args: [
        {
          type: "string",
          value: "a string ",
        },
        {
          args: [
            {
              args: [
                {
                  args: [
                    {
                      type: "string",
                      value: "STRING + blah",
                    },
                    {
                      args: [
                        {
                          args: [
                          ],
                          name: "b",
                          type: "call",
                        },
                        {
                          args: [
                          ],
                          name: "c",
                          type: "call",
                        },
                      ],
                      name: "__+__",
                      type: "call",
                    },
                  ],
                  name: "__+__",
                  type: "call",
                },
                {
                  type: "string",
                  value: "\$",
                },
              ],
              name: "__+__",
              type: "call",
            },
          ],
          name: "concated",
          type: "call",
        },
      ],
      name: "__+__",
      type: "call",
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall("a string " + concated("STRING + blah" + (b() + c()) + "\$")) 1`] = `
[
  {
    args: [
      {
        args: [
          {
            type: "string",
            value: "a string ",
          },
          {
            args: [
              {
                args: [
                  {
                    args: [
                      {
                        type: "string",
                        value: "STRING + blah",
                      },
                      {
                        args: [
                          {
                            args: [
                            ],
                            name: "b",
                            type: "call",
                          },
                          {
                            args: [
                            ],
                            name: "c",
                            type: "call",
                          },
                        ],
                        name: "__+__",
                        type: "call",
                      },
                    ],
                    name: "__+__",
                    type: "call",
                  },
                  {
                    type: "string",
                    value: "\$",
                  },
                ],
                name: "__+__",
                type: "call",
              },
            ],
            name: "concated",
            type: "call",
          },
        ],
        name: "__+__",
        type: "call",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: malformed("a" 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseFunctionCalls: malformed("a" 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseFunctionCall: someCall(-123.500) 1`] = `
{
  args: [
    {
      type: "number",
      value: -123.5,
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(-123.500) 1`] = `
[
  {
    args: [
      {
        type: "number",
        value: -123.5,
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall("hi" + ("there" + (("is + "bad" + "nesting"))) 1`] = `'{"index":36,"rowBegin":1,"columnBegin":37,"rowEnd":1,"columnEnd":40}: Unable to consume token: bad'`;

snapshot[`parseFunctionCalls: someCall("hi" + ("there" + (("is + "bad" + "nesting"))) 1`] = `'{"index":36,"rowBegin":1,"columnBegin":37,"rowEnd":1,"columnEnd":40}: Unable to consume token: bad'`;

snapshot[`parseFunctionCall: someCall(true, a(b(), 123), "hello") 1`] = `
{
  args: [
    {
      type: "boolean",
      value: true,
    },
    {
      args: [
        {
          args: [
          ],
          name: "b",
          type: "call",
        },
        {
          type: "number",
          value: 123,
        },
      ],
      name: "a",
      type: "call",
    },
    {
      type: "string",
      value: "hello",
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(true, a(b(), 123), "hello") 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            args: [
            ],
            name: "b",
            type: "call",
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(true, a(b(), 123), "hello",) 1`] = `
{
  args: [
    {
      type: "boolean",
      value: true,
    },
    {
      args: [
        {
          args: [
          ],
          name: "b",
          type: "call",
        },
        {
          type: "number",
          value: 123,
        },
      ],
      name: "a",
      type: "call",
    },
    {
      type: "string",
      value: "hello",
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(true, a(b(), 123), "hello",) 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            args: [
            ],
            name: "b",
            type: "call",
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(true, a((), 123), "hello",) 1`] = `'{"index":18,"rowBegin":1,"columnBegin":19,"rowEnd":1,"columnEnd":20}: Unable to consume token: )'`;

snapshot[`parseFunctionCalls: someCall(true, a((), 123), "hello",) 1`] = `'{"index":18,"rowBegin":1,"columnBegin":19,"rowEnd":1,"columnEnd":20}: Unable to consume token: )'`;

snapshot[`parseFunctionCall: someCall(true, a(true, 123), "hello",) 1`] = `
{
  args: [
    {
      type: "boolean",
      value: true,
    },
    {
      args: [
        {
          type: "boolean",
          value: true,
        },
        {
          type: "number",
          value: 123,
        },
      ],
      name: "a",
      type: "call",
    },
    {
      type: "string",
      value: "hello",
    },
  ],
  name: "someCall",
  type: "call",
}
`;

snapshot[`parseFunctionCalls: someCall(true, a(true, 123), "hello",) 1`] = `
[
  {
    args: [
      {
        type: "boolean",
        value: true,
      },
      {
        args: [
          {
            type: "boolean",
            value: true,
          },
          {
            type: "number",
            value: 123,
          },
        ],
        name: "a",
        type: "call",
      },
      {
        type: "string",
        value: "hello",
      },
    ],
    name: "someCall",
    type: "call",
  },
]
`;

snapshot[`parseFunctionCall: someCall(true, a(true(), 123), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCalls: someCall(true, a(true(), 123), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCall: someCall(true, a(true(), 123()), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCalls: someCall(true, a(true(), 123()), "hello",) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCall: someCall(true, a(true(), 123()), "hello"(),) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCalls: someCall(true, a(true(), 123()), "hello"(),) 1`] = `'{"index":21,"rowBegin":1,"columnBegin":22,"rowEnd":1,"columnEnd":23}: Unable to consume token: ('`;

snapshot[`parseFunctionCall: testing blah 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":13}: Unable to consume token: blah'`;

snapshot[`parseFunctionCalls: testing blah 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":13}: Unable to consume token: blah'`;

snapshot[`parseFunctionCall: empty string 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseFunctionCalls: empty string 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`parseActionGroup: Thought: I need to do something
  Action: someFunction(123, "str", true)
  Result: blah blah blah blah 1`] = `'{"index":34,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: Thought: I need to do something
  Action: someFunction(123, "str", true)
  Result: 1`] = `'{"index":34,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: Thought: I need to do something
  Action: someFunction(123, "str", true)
  Result:  1`] = `'{"index":34,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: Thought: I need to do something action: thought: hmmm
  Action: someFunction()  ; someOtherFunction(" aa() ; bbb()")
  Result: blah blah blah blah 1`] = `'{"index":56,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: Thought: I need to do something
  Action: someFunction(true); someOtherFunction(true, 123, 'str', "str2") 1`] = `'{"index":34,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: tHOUght: I need to do something
  aCTion  :    someFunction();; someOtherFunction() 1`] = `'{"index":34,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: aCTion'`;

snapshot[`parseActionGroup: Thought: I need to do something Action: head fake
  Action: someFunction(); someOtherFunction()
  Result: blah blah blah blah 1`] = `'{"index":52,"rowBegin":2,"columnBegin":3,"rowEnd":2,"columnEnd":9}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: Thought no colon doesnt work
Action hahaha 1`] = `
'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":9}: Unable to tokenize the rest of the input: no colon doesnt work
Action hahaha'
`;

snapshot[`parseActionGroup: Action: action should not come first
Thought: ha 1`] = `'{"index":0,"rowBegin":1,"columnBegin":1,"rowEnd":1,"columnEnd":7}: Unable to consume token: Action'`;

snapshot[`parseActionGroup: completely invalid 1`] = `'{"index":0,"rowBegin":1,"columnBegin":1,"rowEnd":1,"columnEnd":1}: Unable to tokenize the rest of the input: completely invalid'`;

snapshot[`parseActionGroup: empty string 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;
